# Aruco_pose_estimation

./: README.md  calibration_params.yml
ArUcoDetector/: CMakeLists.txt  detect_markers.cpp  read_me.md
ArUcoGenerator/: generate_marker.cpp
ArucoCubeDrawer/: cubeDraw.cpp
ArucoPose/: CMakeLists.txt  pose.cpp  readme.md
CallibreteAcuro/: CMakeLists.txt  calibration.cpp
GenerateArUcoMarker/: CMakeLists.txt  generate_marker.cpp  readme.md
example/: CMakeLists.txt
example/src/: main.cpp
